[package]
name = "code-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
teloxide = { version = "0.12", features = ["macros", "rustls"] }
serde = { version = "1", features = ["derive"] }
log = { version = "0.4.21", features = [
    "release_max_level_trace",
    "max_level_trace",
] }
env_logger = "0.11"
serde_json = "1"
clap = { version = "4", features = ["cargo"] }
toml = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
once_cell = "^1.19"
chrono = "^0.4"
tap = "1"
async-trait = "0.1"
helper-generator = { git = "https://github.com/KunoiSayami/helper-generator.git" }
futures-util = "0.3.30"
atoi = "2.0.0"
