[package]
name = "code-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5.3"
async-trait = "0.1"
atoi = "2.0.0"
axum = { version = "0.7.5", features = ["ws", "http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "^0.4"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
futures-util = "0.3.30"
helper-generator = { git = "https://github.com/KunoiSayami/helper-generator.git" }
kstool = "0.2.1"
log = { version = "0.4.21", features = [
    "release_max_level_trace",
    "max_level_trace",
] }
once_cell = "^1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tap = "1"
teloxide = { version = "0.12", features = ["macros", "rustls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
